tests/NormalTests/paczka1/small_fuzzy/60381209.err
Error in line 11: iuQq93BRVge S240 24,5
